# Codigo-Uni

./: README.md
AmpliacionBBDD/: apuntesPython.py
AmpliacionBBDD/Ejercicio2/: ejercicio2.js
AmpliacionBBDD/P1_GX_Nombre_Apellidos-Nombre-Apellidos/: Cliente.json  Compra.json  ODM.py  Producto.json  Proveedor.json  models.yml  prueba.py
AmpliacionBBDD/P2-BBDD/: Cliente.json  Compra.json  ODM.py  Producto.json  Proveedor.json  models.yml  p2.ipynb
ProgramacionWeb-Cliente/: help.txt
ProgramacionWeb-Cliente/practicaMarvel/: package-lock.json  package.json
ProgramacionWeb-Cliente/practicaMarvel/src/: App.jsx
ProgramacionWeb-Cliente/practicaMarvel/src/api/: apikey.js
ProgramacionWeb-Cliente/practicaMarvel/src/components/: Background.jsx
ProgramacionWeb-Cliente/practicaMarvel/src/components/comic/: ImagenLike.jsx  ListaComicsFavoritos.jsx
ProgramacionWeb-Cliente/practicaMarvel/src/components/common/: Boton.jsx  Imagen.jsx  Texto.jsx
ProgramacionWeb-Cliente/practicaMarvel/src/styles/: App.css  index.css
ProgramacionWeb-Cliente/practicaMarvel/src/utilities/: apikey.js
SistemasDistribuidos/Broker/ArchivosBroker/: Broker.cpp  CMakeLists.txt  conexionManager.cpp  conexionManager.h
SistemasDistribuidos/Broker/ArchivosCliente/: CMakeLists.txt  clientManager.h  fileManagerDistribuido.cpp  filemanager.h
SistemasDistribuidos/Broker/ArchivosServer/: CMakeLists.txt  clientManager.cpp  server.cpp
SistemasDistribuidos/EjemploRPC_0/: CMakeLists.txt  clientManager.cpp  main.cpp  persona.cpp  persona.h  personaDistribuida.cpp  server.cpp
SistemasDistribuidos/Ejercicio1-EnvioMensajeClienteToServer/: client.cpp  server.cpp
SistemasDistribuidos/Notas/: atiendeCliente.cpp  clienteDistribuido.cpp  empaquetamiento.cpp  server.cpp
SistemasDistribuidos/fileManager/: CMakeLists.txt  clientManager.cpp  clientManager.h  fileManagerDistribuido.cpp  filemanager.h  main_fm.cpp  server.cpp
(+14 files in other folders)
